--- a/L01P022022CC601/appsettings.json
+++ b/L01P022022CC601/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "notasDbConnection": "Data Source=ALEXLC96\\SQLEXPRESS; Initial Catalog=equipos; User ID=sa; Password=Adrienyfelix96; Connect Timeout=120; Encrypt=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
